# cosmosis2cobaya

./: .gitignore  README.md  dot2yaml.py  ini2yaml.py  pyproject.toml  test.py
.github/workflows/: publish.yml  test.yml
cosmosis2cobaya/: 2pt_like.py  2pt_shear.py  IA.py  _base.py  add_intrinsic.py  boltzmann.py  choose_des_ia.py  choose_kids_ia.py  correlated_dz_priors.py  cosebis.py  cosebis_like.py  fast_pt.py  fits_nz.py  fits_nz_des.py  fits_nz_kids.py  lens_photoz_width.py  photoz_bias_des.py  photoz_bias_kids.py  pk_to_cl_des.py  pk_to_cl_kids.py  shear_m_bias.py
cosmosis2cobaya/intrinsic_alignments/tatt/: tatt_interface.py
cosmosis2cobaya/likelihood/2pt/2pt_point_mass/: 2pt_point_mass.py
cosmosis2cobaya/number_density/load_nz_fits/: load_nz_fits.py
cosmosis2cobaya/number_density/photoz_bias/: photoz_bias.py
cosmosis2cobaya/structure/projection/: project_2d.py
inputs/: des-y3-6x2.yaml  des-y3_and_kids-1000.yaml  kids-1000.yaml
