[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmosis2cobaya"
version = "0.1"
authors = [
  { name="Jun-Qian Jiang" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[tool.setuptools]
packages = ["cosmosis2cobaya"]
