[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmosis2cobaya"
version = "0.3"
authors = [
  { name="Jun-Qian Jiang" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "cosmosis",
  "cobaya>=3.5.1"
]

[tool.setuptools]
packages = ["cosmosis2cobaya"]
